@@ -7,6 +7,10 @@ What's New in astroid 4.0.0?
 ============================
 Release date: TBA
 
+* Fix false positive `invalid-name` on `attrs` classes with `ClassVar` annotated variables.
+
+  Closes pylint-dev/pylint#10525
+
 * Prevent crash when parsing deeply nested parentheses causing MemoryError in python's built-in ast.
 
   Closes #2643
